Archive2/f1/dd725264f80250/output
main.cpp:14:19: error: missing ',' between enumerators
        MODERN_ART
                  ^
                  , 
1 error generated.
